# nasa-ads-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_connection.py
src/nasa_ads_mcp/: __init__.py  server.py
